--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,11 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
-/.vs
+/UI/PlannerMob/PlannerMob.Android/bin/Debug
+/UI/PlannerMob/PlannerMob.Android/obj/Debug
+/UI/PlannerMob/PlannerMob.Android/bin/
+/UI/PlannerMob/PlannerMob.Android/obj/
+/UI/PlannerMob/.vs
+bin
+obj
+.vs
