--- a/UI/PlannerMob/PlannerMob/PlannerMob.csproj
+++ b/UI/PlannerMob/PlannerMob/PlannerMob.csproj
@@ -9,4 +9,10 @@
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1687" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Components\" />
+    <Folder Include="ViewModels\" />
+    <Folder Include="Pages\" />
+  </ItemGroup>
 </Project>
