--- a/UI/PlannerMob/PlannerMob.Android/PlannerMob.Android.csproj
+++ b/UI/PlannerMob/PlannerMob.Android/PlannerMob.Android.csproj
@@ -94,6 +94,9 @@
       <Name>PlannerMob</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\logoTeams.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
