Dodata strana: Add CSV - za uploadovanje CSV-a Dodat ContentView i item u menu

--- a/UI/PlannerMob/PlannerMob/PlannerMob.csproj
+++ b/UI/PlannerMob/PlannerMob/PlannerMob.csproj
@@ -12,10 +12,17 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="bin\" />
     <Folder Include="Components\" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="ContentViews\HeaderContentView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Pages\AddCSV.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Pages\HomePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
