--- a/UI/PlannerMob/PlannerMob.Android/PlannerMob.Android.csproj
+++ b/UI/PlannerMob/PlannerMob.Android/PlannerMob.Android.csproj
@@ -97,6 +97,15 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\logoTeams.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\csv.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\userimage.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\gradient.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
