--- a/UI/PlannerMob/PlannerMob/PlannerMob.csproj
+++ b/UI/PlannerMob/PlannerMob/PlannerMob.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Plugin.Toast" Version="2.2.0" />
     <PackageReference Include="Refit" Version="6.0.38" />
 	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
+	  <PackageReference Include="Refit.Newtonsoft.Json" Version="6.0.38" />
 
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
